fix: support-page / carousel overflow

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,6 @@
   margin-bottom: 40px;
   width: 535px;
 
-  font-family: 'Museo Sans Cyrl';
   font-size: 17px;
   text-align: center;
   color: var(--main-white);
@@ -184,7 +183,6 @@
   grid-row: 1/2;
   grid-column: 1/2;
 
-  font-family: 'Museo Sans Cyrl';
   font-size: 15px;
   font-weight: 600;
   line-height: 120%;
@@ -196,7 +194,6 @@
 
   margin-top: 2px;
 
-  font-family: 'Museo Sans Cyrl';
   text-align: left;
 }
 
@@ -225,9 +222,13 @@
   margin-bottom: 80px;
 }
 
+.faq-container {
+  max-width: 100%;
+  overflow-x: clip;
+}
+
 .faq-list {
   gap: 24px;
-  overflow-x: clip;
   transition: 2s;
 }
 
@@ -258,14 +259,12 @@
 }
 
 .list-title {
-  font-family: 'Museo Sans Cyrl';
   font-size: 20px;
   font-weight: 700;
   line-height: 120%;
 }
 
 .faq-text {
-  font-family: 'Museo Sans Cyrl';
   font-size: 15px;
   line-height: 140%;
   color: var(--text-gray);
@@ -363,7 +362,6 @@
   max-width: 400px;
   margin: 0;
 
-  font-family: 'Museo Sans Cyrl';
   font-size: 13px;
   font-weight: 500;
   line-height: 140%;
